Added functionality to Shipping & Payment form. Switched from 'Shipping.h' to 'Payment.h'. Now, clicking 'Return to Shipping' in the Payment form will correctly return to the Shipping form.

--- a/PaymentForm.resx
+++ b/PaymentForm.resx
@@ -118,46 +118,45 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pbReturnShipping.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAOkAAAAYCAYAAAAf+dpfAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAByFJREFUeF7tWt1x2zgQdglXwpVwJegsZ+Ye08GlBEV2Zu4t7iDuwNeB04E8Nik/
-        Kh04HbiE3H7YXWAJAqBEkYnswzeDsbhYLPYXP6TPKioqKioqKioqKioqKrJYrJ5+X6weF4vV5jchvXnA
-        Zvn5tvHuU/vH+frxOtWWlw/vKej/D0f8ZKiP//rnuERDfM7X7fPysv2BRjLvpetN43y9/cL2NishnR40
-        OGhCGoXz9cMHDXCqcQI8vBf2UQgLQftBSCcN7EZaREKaHOpf7H5CGoVQoNvnPz82/74WH++DUt6QzTvO
-        zxNdlLqr53aqIt3hd2jNSh2BBofJkIOhc5ysQyPgGKV2C2lyqPxjihSLico5dkc+RZTyBvaif7Hand7x
-        Pi7QY4MzVEA0x8b1f2xvhHQw5i5SJKv8nASvp0jn1XNqvx6K17a4O0xdoMCQI2RH/XFx1e6E5IAAki6f
-        l5fNC+uD1mzipCM66Wt5nP5+919ePt7gmfTo3S2W6/Yr84fjttL4KIR7CcvmFycuaZ186Ifjn/bDb/vc
-        X8KcXX3jkwT7pXELGBrLbz9L9yB0nPVX1zYnX/zWvJDsW1s0OT2tr3IxQsyFxSPnV/QFvyK+G/od7KZ2
-        B1rK36lrUlonPsUJiwNvDh0eZ590F/OG5Tv+rHzAyoCudoz4+7D6wgA2HEKmKVAAyrNS5SK1/V1dWiTQ
-        PZo8U3v6W1jhMND12Ox5pZschcA6+b37n9/FjYOVRu1O/iKQL6ZInQ6cMJiv+SY8jj5UqMRzY21RfW2R
-        Xlw9IQlU3jfLT62zmOWg/J0ijWxj2U5/kd1shDWrp8pLxyjIiv0Q5vY6OL+iT/0q8hBLJw80bq5ooXPP
-        39a+WKfluvlq5VidZNE4OG+IpnkBeXFsboXNQWVQkzHN966PDnjfM1eBAkNFSn3qKG+gFIAzzt4JaAV2
-        BU2Niias+qU5cs4GNGEyRfpycdXdtW2REt/O6kY0Sfxhx1s5QvJQW9Ds/IgJYsNzDL9wUhnpIt12dm46
-        xVwH/hD7kp4hRl0/mBiRrLBThLmH/NreCdm92An0LZ1eeB72BeeNvSaFuQMvgPlEjlsUFIfmTYhNt0ZE
-        T7dwdP3t8xhj/K5v7bL8RcxVoIA1DL9NI4eGY43Oi+KLaRYkp1dY+M20SYu0syoCNplskgMmEQbvb+Xk
-        dyt8cn61k1on2VIQvmSRpu7/5Kfvrs/4Iqfn/jEKPg+0/knDzhPLIxoXYzQOz24M7ZZC8rAFqlD5mEtI
-        B+cNPYsu/bfBYaGzpxEp0oSOKR8VQQNkhXZ3rZ7Tj4FJrFzDUcMbbVc9jI0b0WXH6q9w+zpbERzVL1JL
-        U5SKq9QXo8RLtN6KrLDFYZMthcCXKNKEbam+nJ65nUmRKqCxfs2NwzPT+zGHnxYr3H2RM/geHzYD67eS
-        jDhvhhYmzCf93ifl3Mv3JYFJyRmzFKo6AvKhkDYYw/N1V0i7I5Ua6el3mkOcbZFKgLHJVOqLUU5Kpttk
-        shjqVwS+6Yu05G8g9NsXMeP8mhuX0gGFZF8uhcanBDTrt5Idcd6UdARS/eXcO7BIgbkKNecIPR7IXL37
-        A9P5ZU262XvQ/s62SCXA2GQq9cUo8RLNJVh8nFboOMgQUhKBb/oilTeVxJu+f+tOauMx1q+5cXiO5zD3
-        ZNoQmhV8qHmi8q3fUjIUpSK1+aowO6m3YfIiBeYo1JwjYCjRZTcNigodxnZeDpWwl7MT9zDYyONCAoxN
-        plJfjP2Ssh+8cMoY/gcTlT9HkZoYJRPWvPjzp52xfs2NwzPT7UKQXuC6+o4rUoCenfzUVURl2U+JsxQp
-        MHWhlhxh3ip2CjIEpvkiJAfwcGE1xB8cFebor+z+fsRzeFu6nzlCAoxNplJfDMuLFVjIDmSDs4VaR99g
-        u+vrvVSKIXyzFCmg/NT821jg3aeN31Hs3W2sX3Pj8Mz0fpHGRWRjjbmE7GVgnJA8UkUUnf5sbPzXEcRP
-        yEkZiqOKFIgLVcijkHKmAolHfb3dNJ4fuyAaihM09Amrg8hxQWBnhTdsdg5ueIkAOdvni6t+AuSSAigl
-        U6kvBeLTN4VOX5s8QQcX+Dv6e2ttt8mfA/POV6QcI42d+0eLW9aT+ePkG+vX3Dg8yzw+r2wRuZwhHTje
-        nEto1s/d/OvmDf3uFRHzm7z0NvvYdL5hp2QoSn17IxTKNP+7a51pEX379A7E/OQA+6HY8VC7Tb9ixz0p
-        HQz+LhX6qO2Ypo4KCUB8o5Kp1JeCXYjQ4vmIhv9WUX2Fp73fp0ABHTNXkQK5GF1c9T+zjPVrbhyemR7y
-        iouIYxoafxPWZ5sXQC5vckXEcYvngM3tdZyXpUIs9b06wHDcxexLgBLg5Bwf9+2X5D8L0LWkE+ze1/Zf
-        BY3RqfhW9YHfhDSIUt6kYOc45dhUVFRUVFRUVFRUVFRUVJRxdvYf3s4K5gsZu0wAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAM4AAAAYCAYAAACyeML2AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAABsdJREFUeF7tW+txGzcQdgkpISW4BFqPmfxMB3EJEiXP5J/VgdWB0oHSAT3Skfop
+        d2B3wBKc/Ra7wAK3hzs+jiKd+2Z2RC5A7BvYA6l3EyZMmDBhwoQJEyZM+F9gdvXyu7w8KGZXi9/k5a+P
+        y0/L92fz5zuPzm+e/iRnvEkQJgRofBALYVVxNm+uzm+WP89vmoWwDgKS+Qq5kC+s4wQS+my+/A4S1lY4
+        mz99DI72CesPDVoXUnEuPwrrqIGdUzcPYb0ZND7kuwdhVXF2vbwPsVvtlBebgmSuWU+SL6zjgxbNPhxk
+        CucVrxPxzsW7CAjJLx/ZGCn4z1+FddRAq6N2C+vNkHw3rHBQ9Njo/vj7sO0a5EHX2dXrcbZrZdHs6qC+
+        pCYZCx7fYScZu3CQLPJyLzjlwpngYN9FA/QltfbMF7fLV2ExkKyky2fqpfmIDtQsZlfPM5nCID7pa+ew
+        /vGUPL95RmtBLedTqzc+ny//DfNTq6i80P6tvujaSHZJeF4f+n24bv7RcfhtSP+dZOb6lidu8EvDmwoo
+        rL/8LMO98P0XTn2ZwrCFc/lp8d7KxPxSL/iK+NAlFlrkXT/fI4fKNcqYWT/ivfVzl539sWJ/ia3NGvrB
+        BzI1IumX5AX923YNAhYMi0DwfooGGFo4djzXZQknfAXJe6KXv2QqfZ752vLFuTJMQUVy8/qt54l42plk
+        Uh7Ro/yFg9emcFiHUDSQ13yTOczvKx6ac29tUX1tgl7cvlDCx/W+2flE2QbThZAcPH/Nus4bJJmuGXXU
+        +MBukgOfsw91Lt4jHjLdjWf3GiuNIVFKeOvHUDTBj+JLmZ8n8JBYtdfILzDaeYW5QUfiP4S/G3QtYxUN
+        4DnagsY06aOjJCnBe7Q9LTmZi4wIwTT8bhk7FM764tbdKTFGtKKdNOlGPAle/2WKXUdYESkJcQon+YhJ
+        CnL9UgGfkzXWNpaGH4vPyrPrZvJMG+352q4Bfxd+kcuEFLPCj1m+mRjTKZ/s17j4sVplJ3a+Rlo75VUu
+        k7qdO53v5VAnxioaIDl1RcegvRx4wtGqSfpT5cK5Jc9CnYU1hBVleEbvUDitI9sGvGxhTFL2PrfUCufD
+        Nbcfrny1k2gtLBfSdvA8u8EA5cN1WrN9CUQ7cqsb8Hxt9GrFTOLJJ7IWgrWfci/6XpFilnywaaxojR92
+        vs2rsnUE0vobFA6cFj7EvftIhdNJONajM+xuic+WRHzZ2VMhCN81etvCsTxFLeFrYyVqc4mXJZlFHvzu
+        Dc4mK2IK27Ee+DIlouY7b2woz0I3A+iB99b+uk72WXWzWJVjNq94QgFvk+gFdgkSNErxqBOwPhynBAOC
+        vPyZwO7cNSI94y6THN02+gQLh/ldhdE3rsCJqDG1BL/Z+NZ8543Vee2dHyhj0OcrzYExCseuaeHZNQhj
+        FU+XQtpXiqy461gD4eBuss8+3Uaf6olTtoIK/RzWEFYVWId8Sf6BH1J8ZbjqO2+sxsMFhLAybHriaKtp
+        b1o3jVU5NrvCRsIyO04c3swzuwZjjOLxHA3AYTBCxmJSC58N9JzqoUsGEAvH+Z4INobPHVPhqPx2oafT
+        eNiX0qX/QnyDXC3Mmu+8sRqPyI2Z+llv1vLCabek8SHeFKIXl1qsyjGbb3t7xrHYd/F4jlaY24zM4cmI
+        5ouwGJgTgtDQ/GR8ktE+hrV3FRnRlvzK9+0KBzuhsBlkg03CqG+yncfclkhBuuPiBUnyKCwG1pPPj1U4
+        xM9jlvy8ip2Ftb/MsUv+LimOVeNSi5U/X7uPJDP4la/EReaWhQOUxSPsraBO9RSC0jTWOnVK+TgtQJIM
+        HASZypB1YiBoXry/tzIC6Zdfq+8Xt5sFY1+FA9A8+dFi0BeflyGjAxfKI/19sLbDPzLVhZwsMr9ZwLeZ
+        /8xOXouPN1bjEcEmkgGZrDPbAbq4Tc+y1lew1bOTXmf6eHGpxcobC7kQ8iqQ+pS/eti+VbNIybuf36p1
+        KVR8NxMTAvLhPBlTgqH0cJtfqQKhL05OsYnoPCjzN+LkONmBDl84dnMAlfKIp99/RII/+opG4dgMogRZ
+        3g19PvTG+niOXJKZXwBZX3Eyh18A6HxQK8ZeXGqx6hqDPHQhIbeaH9hEoLNn10kDDkRvD+O8gimBoHTN
+        C2PDEu9QgK41nWD3UNs9bOq/beAlneotbzPYwhHWznbuCm3pf5nCmXD82HS39grnEMBzMdpH/3JAWmfn
+        EmnChFFwKoVjf4qD5ynoTYSLFG7riLKfKE2YMCpOpXCAcJPbevZDIWU/tJ0wYXTocxpIWL3YdP6+Eb4T
+        C/9O4Ovx7t1/nAoXN5kdZbwAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAANUAAAAYCAYAAABtNrjpAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAB7dJREFUeF7tm99xGzkMxvOSRJLvZq6EKyElOLZv5h5dQkrwv5u5t7iDpAO7g7gD
+        DgAACw4BQL7hQQAAB7dJREFUeF7tm99xGzkMxvOSRJLvZq6EKyElOLZv5h5dQkrwv5u5t7iDpAO7g7gD
         e2xLeVQJSgcqIYcfCXBBLleyPbtOnNtvBmMtiCWwFD6C5MqvRowYMWLEiBEjRowYCK9fv343mUz+1Mtn
         wx8CfOvliBHPB5Jv+vbt0WwyuZhOJteIfD6vEWFnMvlAG/aq2ohgP51+R54zwfFlfuU5Pqh6hMP+6e3h
         3sndeU1o2z26fvaJ8JfAbDY7lMRbWwKWIgn5UU0DAuFi20pVG7EznX5O/b15c6jqwfF7fK7glxhU/VLA
@@ -196,7 +195,7 @@
   <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAARgAAAA0CAYAAABRlyd1AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAC95JREFUeF7tnfGVGzcOh/2PY2n37r0rwSVcCSkhHSQluAO7g7iDuAOnA7sDl+B0
+        DgAACw4BQL7hQQAAC95JREFUeF7tnfGVGzcOh/2PY2n37r0rwSVcCSkhHSQluAO7g7iDuAOnA7sDl+B0
         sCXkfh8EUBgMZyStd3MXH773+HYIgiCIISGOZEsvmqZpmqZpmqZpmqZpmr+G+8Phl7vD4d2sHNSm8tpV
         m6ZpbuN4OHy6Ox7/3CtKMm9dvUkcX716E8n4X8LFTdME1yQYyittJu/SOIrLHxGfPuk1zYScYHhccvEL
         NszxeMzJ58GbGkcx6QTTNHtsJRjg2B9tdRPp+sd6+qEu+bBxfzy+l/wrpZ6AsBVtFMbCZtSV3N6jsxjj
@@ -253,7 +252,7 @@
   <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAA6AAAAGqCAYAAAAVwSn+AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAnO1JREFUeF7t3QeYVdW5PvConCkY4GoKIaI3915LxHQNGJPcoKYnliSaxNgSE28S
+        DgAACw4BQL7hQQAAnO1JREFUeF7t3QeYVdW5PvConCkY4GoKIaI3915LxHQNGJPcoKYnliSaxNgSE28S
         S6IpxpIo1sTYu8aCGntFxUoH6QjSO0MbGMCCIqj/lPX/3jXr23x7nXVmzsCZYWDe8zy/Z++91tpr73OA
         OfOy9l77PXzxxRdffPHFF1988cUXX3zxtdW9nHNYbAeynlsa26sjjzxyByxDm6xc9evXL5Oqt7QvsV1z
         7eM+U+1xTok2/jxL7W/L4rqmpPrSzyTeX7exVLZelSqP5I5hPsOsDprqy/7ZJc6nZJ3djvbJxPvYcruN
