Added a new CheckoutForm and completed its design.

--- a/Home.resx
+++ b/Home.resx
@@ -14428,15 +14428,180 @@
         GytY4ra0tLaFEit7e3ijhhiRY40VFAABeoAA/9k=
 </value>
   </data>
-  <data name="pictureBox9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAARZJREFUSEvdlGsNwkAQhCsBCUhAAhKQgBNwAA7ACTgoDsABEmC+pJNsmtz2rkn5
-        wSSTJtfZ9951f4+teBGf4mdgP5ztxNlYizfRTkskMNombMS3iAO+RzE64f9edFVoOKsCjuz8Kq7EEvh3
-        Fh2kqhJnhWEtSAQbWpqCoSEkSJb5GGhdNUtRhDOhv61gTtiyXUWwfoiqBxZA/119EQjgXEzaLx7gJSJo
-        vjgCbcWWNhfhITOwVrAY2KZDZsUQsXKta+r7M/k++f1JMxnhJGKTbpARnwoMs0r4RyJoYXrJIuJjR1b0
-        N94NkjiI1phoqxcEofua8S6SubVNQQBDY7seop2yzpzFlsSEmoPUYhxkETjIYgF+ja77An4Wb2tpt+mH
+        iVBORw0KGgoAAAANSUhEUgAAALcAAAAwCAYAAABT2+v/AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAIW5JREFUeF7tnfl7VkWWx9uFHcIS9jUJIWDY1ySE7CiuuCAoixCIIDtJUKe7badd
+        Hnu0te1G3NplFEVUtNHuVltFBQS115/mmWfmt5meXn5te/4B53zOe86l3ro3mBB6cTr3eb7Uvbfqnqo6
+        9a1Tp869b/jaWRznGfKOL774InWvK4c8b2fdl3U2h9Xvffur199z/PWOZHCNaAm4vuuuu86X8wReJixr
+        52cialLmkltPFF982yfNoLHt+EbSut3HG8h36BPn8AhkntfUerTE69c2tH/cvLT9xFzrJ+XCvulECK71
+        3lke+nzYFmT3HH+Zwwfr/KXtn85t2nvqWNPeT481tn9yvLH9pMBTB9c5nC7H+WfPCUFaIQ3yfPB84JwY
+        PkkaW080Nu395It8fPac5F1AOcO5Plzu+U3tpxrS9Z+6W/IuWLly5QUNbcfbvH+kgMnHs8jw/gg6OrSM
+        lTtfnn8jJwf95nRc1XJ4WCfk9BxdPUSpSrhAueeLNc0gXNcBIZZse6sEIgcWX+swXNCw+/2m1LPtpw7U
+        19dfSD6wtp2LIyGZ4YL6Xe8ujetvbDtxb3l5eW/J7y2TNJ0v/eJZZHjbOmqj3CfR+jIncvsnb0reBaF+
+        zmF//+EPFOkDzoBd2LTnvYtTg9ANNLSdtoRex/z583tJ2rt2+zuXpMq3fvxCaWlpHysDyb2N3TogGiSy
+        diC3V2b9ez66T/L6CQaQioX977jM3JWPjGACGik7IqSuUDZRezW0njwQy2lq/eB68oLJfE762nPIwaAA
+        BhwyQaqarW8uSw1CN9HQerxdqmMAdaAFfQT9supqbPv4RfIEWE/K+qB390CGT2Jtw5Jbjlwa19+w+4Pv
+        DBs2rGD48OGDpEwB13GZprYTe33yQeCY3IEl1rrQqzz3pzwZ7ad+K3n9BX0pY2V5puc4R4cOOJaDARg1
+        atSA6ptfvTxvEHID8WdZrn/3ZUg9dxp/WrT+QJnUBalBX+qSdNDca783e841350z/cr7Z89Y/uCskurd
+        E+U+eQw6BGdCnEtyI6/PmDFj+kNg6i2/7J65YPbyf5k7Zck29gvDHFNrby6O+yN9/Xj8+PE+Ad2tSA43
+        GHLaq6ioqG/tjne2xDIa9hx/SfKZQBC8T7QSSNJzdPfwQWCQGKyCqo0Hr4wHYtH6527r06dPqeRPkXSy
+        pKBEzhVyXgxGTbt8ZsWGg3vF+qaI3tB67FEp0w9SQWyso1wPFRQKRhiG271BlJOUiQAZU9bxLA51SfCn
+        jZgQa4iAOkcOGDBglGPgwIEjuUfKtRDxk7g/VS1HLpUyCcEFtC/0632FGtDUfvLj+Hkm0uDBg7WvglDO
+        V816nwvDc84PHQTz9xiEgYKhVc3PXRMPxII1T3+zd+/e5ZJ/kWEaEGJPlTREGZNg+mV3XNXYfvJ/Izmf
+        Sz4D6RgsKKxYf+Dq+aufuWbR2qeuXbTumWtmL79nruW59YYkatFA7c4TxUtvPVm/9NbP6pvajzfkzk/W
+        E8Ugrd35HhNNyr0n5T7TvPrWk1rWZOkKJanWT52L1j577cI1T1+3cM2T15U1fX1h//79xzikzLj5Nzy+
+        MuqLuC8fPj5ixIiBWGbTYdJGn0Ry3n/BDftmxM/W7zn2qeSNlsnDhGaCaV+Rs2Tb0RL6kutbrv2O0/3l
+        /mf1y9reZXXp0NKHz/MsoVe5fR4RmnzZuXPyQJYhsXvn1e46MdefIdqEbv369Dn1ndL217ceK8pJyD+Q
+        B3JtyY1R7rnjDd5/wP3c9akGiyzxeKp9eQeCWQZtEPqaJS1csPqpFfFgzL/xiTuF3DMlf4ZhusCJDsol
+        f7pPAEhfs/XHz8dyFq17ukbyIRUDitUaHpep2/nuA5Y/yJd+yLJ4yxuTc2G0/PKZaJfNG4juI0uAzIFD
+        hw4djCsSl6nadKhVSD1WyoBx/fr1myDpJFyzqOzn5Ut3TwzdE4GuDkZ2JubA+l3v3x8998XiTYfYg4wX
+        jCooKICgBWJUpuVCjvllvwzyjAxjzp2JcH6qfPvJfWeqQ/L+C3k8G8pCfkPrR9fJ5jp/39AJLL1V5YXt
+        UkDUrDH6cpx63id1gPRBo21jhAswmGV40Zq0lVq4+vF/lvzZAggeEzuP4JIq5q18ZGcsp3rLGzslDzfE
+        MSIuU7fjZ9+V+75cq2tCGxvb01GLrgIri0zbLA65aNld8+IyVZteaZU8SD1OUiW2oGTJliP74rKVzS9c
+        JXmseMiF0BAcJDptbDv527znZJKMm74MXbK3YGXALRrcrf4JaZlQ5mJqZIrrzLKdQEPbqTaR4/25MDNk
+        20k0tH1MtCzUjeLsiJ0DExQZ9BMO+yog93IHF6aM3ubfYi1HzVu1b1UsbP4Nj0LuWUZeiIwLMgWIlQZl
+        kjfNLDdlZsy55r7mWM6SLa/vljz3rUfgz8ZlsNxuzQQs1/3qdr27OS53NrB+DoDcQ+TIInf1zUrusQG5
+        WVYnz1vx4Lq4bEPriVOSx0rk1ptBBOrmLWk5dFX8TO32d45IHnuWSVbHCJk4O+JyXcWM5feNElm0wdE3
+        q1wn8ScCDCJDIdbyREaZTkFcsHtNFm3qhaGq35V+f9BV8I5C5OmkMWLnWXAu1Dc0H3QoPua8lT+4IRY0
+        /8bHvyX5083Hnty3b198t0mSYn2wbFwzYERE8Menz7zy7o2xHLOKowW6WZM0TW6x3EZuSINVHMhmNC53
+        NjDXqwBiSzps1pUZlrvl8B7JG2uuyXjp4yT2EXJe1rD7g1/E5YsqmyH/AFsVsNgMYj/cnrpdHx6Ky0+/
+        8r71GASRy3OQe1TNtre/G5frKqo2v7mMeoFN4oFZ5TqL2SsenW68QM7ncX5nQSiVNqEfc+HOibFChshC
+        12E4NiH4eSxdNqsgEYQas/DG/Slyi6/8TclTYgsgNAOvkQVJISvXauWMCFOzLHdl86F2rJU8xzOjmUxx
+        GQZa8nBZhkAQSQsa9nz0Ul45WdrnrXp0FRNx7vX7bpRN242584cl3X8DqNvx3mt5zwiYNBahoK/DZ1x+
+        x4K4zJLNh/fYRnIMbbUJTFRoStXGg6mYd+2O9++njQwcujSSDyyq3FoUl21sO/F7yWPyo6MikT8eXdRs
+        e+vBvLLav32rGAv6Rh9zeFjTypueS5FjccvhK0Qm7hZjqRM4LoNOkOs6QhZ6q9n6k4fjsoRoRQ66Ghrn
+        qRx5nva5/lWWyGbzXbHuqRVs0BdvPHC1rHiz2HgzUQCrZv3Ot7fGMl1WDvQz11dkL1z9aMqbqN3+9i1M
+        YuMvFtz3CfluiWAAg46is8i9cO2zX5cyTmyI6SE7dIgVLDRLDMmx5KWzrr5/fSxn8aaDeyWPSYDF0g1b
+        XEaW7QeJIgwaNAiCDyMVcudZwIbW45CkVAjHSkGEhlTdJENplo8s92njCF81ypfdviguA7kljz4ycZXg
+        kmJlS0eX1SyKo0DSln9DdwyglFG3R1CwZMubKVdj4dpnviF5GAklt4BN5dja7W89FJbjnYGVUZdPoJEo
+        w5Siqs11YXmwYN3zyyVPyWgrX2o/U735R48wSZFjcpFfWtV84La47Mwr7pkv5TQUGuehW5Ph7dN2IUtS
+        QsPwBL2NZvyMIwVmrIZkuWFy3/ur7QvAvclx+bodb22TPCZzPwuKnCa3HOqWCJTcppBsy33T87ezPJMv
+        0A2QgMHU2SjpILOII4wMxVk+asWGF2+VPDoOwRnYCXEZBlruj7ZVQZUrPtorYRnILf59spEF+PvcE2jU
+        pmrTqylXxtqmqw3W+aKl7ZVxGVwnJjnlrA1MQrfeZdWb30xthCo3vLjcXB61mugyKzZeUrWhSfIhgxMA
+        HYyr2fbT74XlbPLSL49M6T7Gz4srmlOfSBDOlDzcPd3LZK2KlZteeUzKqL4AeiKtuOmZb8Rlyy/5RoXk
+        oa/UGJkcbxdADmNBeBhCltiKh+7YY8EtnXiCQvZesUy5r7KkTTOAnCf9ZUzj8jVb39hpk2YA1htDHW4q
+        ldxkQFAnN8tNLAhSsoRKfhiX7cOM8VCigIGl8RBiwpzrHlwTy1m0/sBt5msyUSZwHpdhiZS8cQwOJJN0
+        bN3O9w+HZYQ4f5AOa2jSFOFKThSzuOWVx8NngCkc2bpqTK7dvTguQyjQyK1W3giu1hurkrUi1e96/0nJ
+        H4ZlYpKXX3ZnKsQoBH5DyiQuiUAnuOh1Qs0tP/5+WJbVoXLjy4/TB08dXFdvOfJiWB7MuX7/SnQGRC79
+        S5GyatPLT8j9WQb0NxN9FVesu3jBmh9+E5JXrn/unyo3PH/7yKmXzrKxSo0Rk0/G5Fen8d6v6nYd/WXd
+        rg9+Ub/76M/rd3/4czFSz2I85Hn0N9xWYgzjqMqNL7XFMsP+ZZ2nyt+swQlkYlQ8WoX1ToLy/rIBsnZo
+        uSs2vIA7gcIQBol98+ShHWT0M+vFBBiHzxTLMXL7ZlQ3onEZBlruTzArq5YjJndj6/E/yH0GSIktA+Sh
+        SLV2ks5kIMNnAIMFmWyiji+r374kLiMKJQwGQUbKgAzHEto1ZISYU+t3f/Qf0XOfj5+3stQHMF5pgPij
+        OyQvtGpqtQUTFm8+8oO4fFeBUUKm9S3TcKCTXr16aUgXHUnq+lPra3qcyiSWFDeU/pY2th3/fSyrM2ho
+        +/h/2NeIDEgNMBhjiPNnle8Kqlt0nEZiUNjvWEg7R2453C1JLDezPttyv7DXLMIw8y0hM88iA4EqR0Ae
+        Azw2a5JgEViSUbyUASVxGSM3YTK1anI+sXbHu6+HZYzcDAxkxhqGfhoDNINZHz4DzB3QVUMwsaxuV01c
+        BsVbXyF1oRF2pLSFzSXWu6z65tdSLk/Fhuc3SjndKDOoYR4bSSEOS7aGAAUQUFcPwcQlt7zRbXLPXfHQ
+        amSbzqgj5adiASE1ZDYi65vmCOpLS5r4v4tbXn0sltVZ4J6ZgQDoZxx7r6yyXUFl84u8CGNVwJNgrwMn
+        E7+bfzDlGgo0n3l0FrmJckjeGBtorLyTW4URiglCijZJ0iFFfHcGWADBseClcRkGWu4XYd18oGq3/+xH
+        YRksCYNjyvdvWxhQzrk3Db8wfAbIfchVLLJZOYqLF99SG5ext4djsdqSuq9YiKtCm+S8tLC4KrURrd/z
+        4adMyOyd/TtHpK1sCmnnBNEPoUYmkL4Bzdr8dhVzrn1grchzl09Ds3EZIzcGAeuMVWYsgFpo4PcN6HJq
+        YVFlhbga/xnL6yzYnLKJp8/0l2+Vssp1BUwQcx8Zo5CTSm4Ot7iJW5JFShtwtdyCgRZ+SchtaUJuKl24
+        9tlUuGrG8vvXmTIhoRIxLsMSLfedgJCpuHb72yly86zAfVcsoPqZ3BP5U6o3v74/fAZIHgPHwFOmpLRm
+        Wyrq4BNZMJwJz7Jn+xG13pLS7qn4l/Gz+Kl1O36WCkHaRpL2QjzaqRbezieK/5gid0PrsT92FqxkRm6f
+        6CBlOFhx0I2VQ3foV1cx9C0p0FVVrnVlFUyxCTFr3qrHvl2z7Z1j9bve+7Wspr+p2/nub2p3vPdrrmXf
+        of53w570JJh2yZ1EXpLNeVZ0JqtfWaCvoGLdk1vMQKg3gXG16J8eSSjQSSkQy51F7oO4JTRMyc0zAie2
+        /2wslDMma5DLL/3WclEuBPOvCdOWW6yYKBZyq4I5jy13Q6uGykrMskOScNnjxUsxYa/wGSB5Sm7kSlpS
+        umRrfVwmmMisUkSFBkFwrk0HOnnmXpveWMaTELDRkmdY7ulv0l4LR1JPitz1e479Ue4vEiwUQIx54ivP
+        s/P5cs59fFnu8ea4HL3Sb7mmb8VynbLcFgr0dow1ywfpaAvnbEjpo+5JBJCfsZoqdUyXeucE7aB+2sI5
+        H7vNEcyaffW9qZd3ZY230xcPq07CPY3LyH3KAO+XwuRzL+zvRdbXhNySOrnPY0MpaS5aIqm6JcyEjnxu
+        KTMGC2aCYsvNOZtM4o6FVS2v74ll4HdCCpRuCu6Q3HLfB0mX2LRbcuJ30rlJNhAjaJdZVwhOh4uyrKHc
+        5+2qThg5L55Su6Mjt8RdMH8pot+iCLDeEKNUFDwt48vHFIhASPky6pWUwYVIulF1Vyd2S4zchOJCEjPQ
+        kEgJbvcgFHsPf8GWGASuQ5nAdKurh/nB6Ix+Adwv3ivgjpGnlpb2SYpR4PMK6mJDSjsSAtq1EnzGFfds
+        iuud0nCrhhVFd0yYIiIycRm5T5mE3EyiYCIxibS/0gY2wlNNn6PNnVa3JA4HpqIlWZa7quXw3cQ9+QaZ
+        17JLNh8pq2r5cWlT68kSPtGsaH59yvzVz02r3vzaZbU7j6aiFKBiw8HvQG6pA1KjfH3rF5dzyy35vkSm
+        3BLe4BFBqd3x/qviC77Mh/85fHSIa/Lk+t/znhGILPW5Te4Z3ZKA3OjGvz9n4NV6CzI3liEaW08QsmTj
+        BjmYFBCm0CYiskYx4FnklsH0wWZglTw2wAmRbKCx2uiVfkFEXAztXygT4PJRn0wq2kEbPDav39jbuU9k
+        Nxb0l7GgDlYgolFEqphYtElh53OmX37XzXG9hFwl3wMEHZJbnl8k8MnsMsN+Uy8uEm1BFoZiiH1u0Ns8
+        CCV33htKU3gmubsLBnny4o2NIp8Ni0dLGIwzWW4Uqpa7ZttP/zUudzYQWW65tf7SmvSbvsDnHsarYlNc
+        P1uxdNMtz+tgT1t6+3Xx8yFqtv6EHwBDCPoDSSC0W0r0zUqQIvfZYPaKfauMPBCc9qXIbZv1cVhtm6z+
+        TQwrMTwg1W9T6LtZxZGxnK6ipHr7EpGTjGcWubsK+8ANfeIyJqFA9Ug8zi0IoyWZbkl3wYsPkc3SidX2
+        pROCpZdOGQDJc79YlTHv+ofWxuXOBtQXyO6A3BpiUp+bAWbwjQD9zffGmo2XSYprUs5GKpbhmNq0lx8A
+        E56chAuCATEZEGuIuQbjF7e8fG/W810B33QwUZAn/ZuIEYnLWJgV16gQcoffy0tK5KxX8FIOS047C2M5
+        XcWIKfVYeXSuYz77mgduyirXFVS1vMJnEpCbNiq5gw+oEl85zy3hQ5UsYWcDfNKZV93TLHKxXuqSoHhJ
+        AR1NW5fTllvJDRkh0pe5AJ2ByMvbdGWRO4hzow+1bLYvgQiDIKjlI+Mi2Rw9EMsArFaSz8uRUiyqbSCx
+        2KwAwCfKuBGltXM747+fCQtufPJ6qQfiAvTbEblZQZTcktInf7MHF0gvNIJrfwWpD6e6guATX/SlYy7j
+        ORX9ZJXvLOwNJWOELvWlYsrnFuRFOc6F5WagCPyPLK2rEpn6qayADmp4zyxMpnUxcqMEfMdkEgjK+DpR
+        NpcfYS019LTr6C/5DLVhz4c/V8i5vgKWvCzliYzQ5+7QLYG85qbpdwuS9rYUFwWLC1FpW9nQiQuqs4i5
+        cM0Td0o+sXjaroQSQBb3byE3lgcylsy86r7m7gz4gtVPrLANNsA96ejtb9IWW5EuNEL4B/9uxSH3QFb0
+        WE5nUb/76C8Li2vYNyQhWIGSu7hiwyXd6S/kpm3mLvpP/Wi7Rkv0k1e5YJYyaOpPTq7ZWk2MGHLyuhZU
+        Nr/0RO761UcJJ0FAhbgQbFI45z6fhM659jsbRpXW801B+GrcNzyQWgfA/MNJ/qxj7orv86YN4ugSa+cQ
+        BBn69lGg30RI6vKZPLg9nj+LNscKkfvaDpk0KLloXPnFc07X/fp+2jL76vv4LpoN11DfqLDkuTULNpa0
+        jckyY/a1D7VVNh98qnLDi08vWn/g6aqNL/2waOG6S2mTTdBRfORjpIY0/XB5JIVkrALFuDhFC1dfuuDG
+        x75dsf6FpwByqjYeerKi+eCTpLlx4FuLVx9jJVt882uPMAbVW958uHzZHZAIWU7uSUSM6Jf3kf2Uhf90
+        P+HvK2wjxuH7sAuN+EpuvtTkmx/GGplVLYf3wwXaQXuUJ9I+2lux4UXFjCv+ucXGKIzkqJspIHZ+kWwU
+        Z4uLshfdhX3W/hr3wv7SB9rAh2ZihNnDwVl975J6/Q65g2iJklvAYEACGjZbGkBsc7Y0xj9UUjJRRgYP
+        f5KypLge5PlHTIBr8ugQCudHsUlMFYJLh8ljo4kcX76SScA5SpH8yVK3h6Oc3CCsjzbi381DSRnkxi1B
+        vn/bopZEQN1KfMH4wIVQcgsuDL59d12NQhZtknN28R6PJaUNtIf+0BfcD/9NKDLUp2V1sMiFrgIC2k9U
+        wMNfSQhMQB2AMsimXiyifi8jKbqC3ED9boHqVsBY0U8dA4GSgrGnXxg6gdxKXFWIom6J7cWI6vAs8min
+        fn0pKeMwC47IOe328N087lPOxhU98zzQsZSU9jN+YewcJP0VGf4NTGIk6ZOt/CPtq0Ast/5pDElzltsO
+        7YhZKJbJJI4roAMIJq5J2InKnEyEY6hMCW0Vc89BGTqGIlAqjUGpDDJWjxQCeRzVSaYDZT4t5Rn40XKP
+        pRsyerv0Yx9rjxN9pijJY7Dzv4Tc+mo/qhsksXNB+EGO/iYx8EWx3pShX2ws6T+DiTGgDfSfviNbY7HB
+        +wFkAHVxBCrHBhw5ic6NNIBrJbb1lY+cEnILaAc6U33ZOffQGf2ClJRDj9RHvUxS9VMlVbfELDhQcmPd
+        zT0LyQ1ZaSd99LCgGkFJHdwjX4MI9mzyNaYAvftY0h/tr4Cwn/dV+ysI+5sYIIEbIPqBXn3vkCO3dYyO
+        YEkKiO1aA3yGItQJpBVJCqmc3A4ltdz3a/+yDDl0DIVDaqwAk0h/hCApDaSzlAHJINnLBJ8IDNr44upt
+        NYSReDGyaO0P73AsXPPkt/gpHH7uvFX7vz3/hkfulqUr9StvIxADPt76SX0AZQPaQt1JpESudbmLdAVR
+        9ccdkvKcWiLrP4PASxssDPLog2/edBUQ6B/rkdTJk3y3IvDfoubpXaBGJagD/UJcbbe1BX3qN/CSOsF9
+        74J+ueebyf42WZXcQaQhIbdAN5QmT9/8Suo/EqENasikTbTPoe0UuGHzepHhbdNfOIkcfRlGf5Eh8L66
+        HJelOhWgH8aPsUOvcEn3RWa5T5PbZqoPmAfvURAdYaYjjK/E3J91xbqPC/yXGKSUB/i1CVlsAFHoICyY
+        KZe6/Bc8dF6/35YUMhfacuhgIozmM8eYsJ1G+6k/iwxXNu3yH0RQN8rSAbBJN5h2+oZLgJ6A/tk5cy/U
+        Z6bNZpmSFcD6jszQSmJd1FLaQPgPs3VjaauVuxLq8jHwcs6rb00NrmfqYqC1L6JH1Zu1n4GHSGrFkR3o
+        dohvwgQ6cQWhW5JwgnI2DjynH3lZ+5QXIGqbk1DdB0md2LQHDvhYIk/7K6AfTFTnFDLy+ivQN9uS6ipF
+        X+inhVUT11GQF+fWAfPl1jY5NALCMTg0Dv/UX+nSENIYHrtG2Ql5BMPNL0JufyMFGGAKFt4r8X1ASKXN
+        2mieUZiM4cQ2M4nbCdTtfPeoyKD9qhzIgIIE1MvH9F6/Dz7tZJCxbGrVzBigRP1M2CYp7U8mia0IKB95
+        tFsnCZPCrL/qXJD8CTs5V4IL1KoJVO+CjvTs7ht18QzPDkVPHHIOhtI/y0v6JtC+ub8t5zlCnD60j7a/
+        gDjaR9EZ9RAIYDWgbRDNeUG41l/O+We3fLvCM15v8vcX7Xq4yxRQnmeTvrpc7ss59bmxDP+YkY+Tv50E
+        OcstR7I7FmhnrAFauVlV/cmSpDRCIY2nkuTa8iEzjYU0KJNBVwsoqf54VlImEeCcRinBgxcbgHsMOIoF
+        CYn4aVEWcb8MhOomV2/iL06hLNqMcrAiSgar3ycUddO2cKlzpYGEmGZ5XV8MooNr5CELC5lYFoHKCXx4
+        Jzh9hJDoTq2u6x0SG7h2K6w/ppAUPVOfroqSgkE2jtqvQL86FoL0Mi6HGTzlhLWNtg+w59GXtk2QtC2C
+        88DbRruo18eTukl13FkVwv5K6h9uuZHwc/rs3FL9Wv/0B8IYDiN30hc97CYDhpVSgrtVZeBpANYV0BCE
+        O6SMfyfh8EHVDtngIxPZKFOJYZs0VZ5ZcyUxqV2j1D42IXxFGXI25Cbm7W8KzQLokiZpAf20vobKVzL6
+        RjJSWjL4krq+/NW8E2oQZDXCkh8S2/1ah7soqndB4rKZO+B690kDXNfko2sltdUX9iHUq+f1NdLqWFhb
+        wsNj3f7HmnSMkB1MFurVtoGID/rXBZgM9IPnbDxdD/q+gJWM+84zgTyW6y8I5CnsXPtr+uE5XX2snZl/
+        bTeZrQKUT6e1QwIa5e4DyiFNYJ3l3FNVoBFaySlIKhdACB1gO+ee15d03so7uKftEKBYLC6zmSUKK4zv
+        h0/KXoDNBxsS3XUD2XmHH9tMZrn0Jc36hWxXviOvvaHCOAduECCmtZfn6LP3G9B2dUWCCeKyQp27LhK9
+        mw4zdW7tBqpvSGJ7A68zga8MICSCwMfCfW09OLf+hu3SP8EsaT8jqnMihLeLNmm7BPpm18fTJnEiU9Db
+        2p3ZX68j7q8g7C9ykJn5h3m0Q3IkyqYRAGWYchQ+4+Q8UVaQn1KgWTeHkyQcZL0v0Pq49jRrNRGwKrCE
+        QW59LS+pbkSE3LprF3g40ENLpNxnY4JP51abCYnM8I/cK6zd1K9ttXaHh7ff2+jwQYv7nyknuPb/eSJ8
+        HqhejVjAPwNQvQe61voiuC4V1ha9z7nVndee4PA8jxDps1ZXwgVJtS2c05awbZJ6m/x5H1OH3gvan+KR
+        pN5f1YHdU9lB35CT6DdjrHJH0GFXtjYg6GAKnkcalPMOJBVmVRzU55ZQ6w6uAR3IiyoI1HKzgZFUyS3A
+        ckNwDyN5PNiJTayVjZBa7cBl8E1e0u6gLY7Mw/sUDZoSIrzHedx3P1wHloZyEr2GaUcI8lWe94HUIdd6
+        L8AZD2lT0ke51H7F7YBk4X03TgKtz9vh/RRwhNfku7xkMgT1hCQO7yf9cVmWZh9kCuwqUXwyAAFivzEP
+        nufPn+HQfCnn53F5Gp+Q23wtyM2mJXRLPBwFnOQesiRsRghpIhsS8+uw2iyvbgFUSQI/vqzdfmT2MeiP
+        pnZ9pkPLBuW4zoK3syOkDm9L3CbDGQ95Jizjz8TwNiVts+eSfnPt0Bt2kG/3EnDtE6IjBHL8XveOoCF6
+        cO6Qy+5XEB2B3CRMKYCUbDg8JKXhI7PgkNxf4QPO+bzVQ5NMCNyRAlsFwmhBXt/+Tg/Vx99hO32c/hIH
+        /fX077Hv3TroDOTDJ8PXh5QFFp3xcJSTHGDNFdwT6B/2kWvCUkpsQfgHK315+3+ltJ7jq3G4VYCETnB8
+        ZSx4+ILCX+lqTN5i80BjooQz5dw3kMhIXl4Ieojdc/z1D1+K8MGMjKEF1xBR8PJlsJGYJIy1a8xZUn+J
+        FIfmeo6e4292uK8FGTV0ZD44RE1+/mXxV0iv8NgvhPYQlSAO8/UcPcff/FD3xKwt5MSKe9jJY6SkCWwC
+        JPFzwPNAJstXYQPZc/wDHUpwI2WIMI6rVjmwznFZR8/Rc3xlDiUsFtnOewj8D3187Wv/B/JR9Y+XtlZ+
         AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMkAAAArCAYAAADSSqyMAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAABOxJREFUeF7tnb9vFEcYhu//QpEoQEpDUoBQUjlKGoSSwpEgUpoYkSbIVAGTJkaC
+        wm744XQ2kYhEnAIbQWfs0Ke0fPkDNvvs8Z7GwyxzMbtml31PenTemW9mZ+e+d75v5izdSK+tnf2T2y/H
+        j7f3Dva3d8eFMYOl1MHTnf0vXktj8nq2e/BD0tiYAYMuJgIpFZMyMMaMCzKsUZViJSqNMSV748ejZIUx
+        RuxbJMZksEiMyWCRGJPBIjEmg0ViTIZjE8mT5/8Ua7+/KFZ/26zgOmVnTNdoXSQIYu6ri8WJEx+9AeVL
+        y/eT7YzpCq2JhEhRJ46YuS8vFhubr5L9GPO+aUUkG5t/F2c+OXtIBDd/vVesl+XUP3z0vLy+X5XL5syn
+        53otlI2/XvUylWSsjN3pbz2tiGT+8sLU+a/+dCtpIxZ/vju1RTQpmy6z9uhFMmLOX77SC9FfvXarGu9N
+        p721NC6SpTJCyFFyAhGhUPq0RyFinjr9cTVuBI7DgaIo0bHrK7RFkqdxkWhVxUFS9XUo9Tr/+Vyyvoso
+        YqYWAz1P153PIsnTqEhYNZnwo0z66trmtC05csqma2hBWF5df6OOKMM+jHQsLNdpHxEILnxzKZmW0X7+
+        uyvlYnO2smPxuH7j7iGb2+V9qb9+405Vx9/h4sTn8f3C4qE+4kgdikR9YMsYb69sHLIdKo2KBAeQo8fO
+        kSMUWMrpuggOyHiJGrPsP5aWH1T2OCF7lgtfX5o+M4uE7OI0DlulcNxTdoiQMpyfd2zoU32ozfnP5qpy
+        XdOf+pBIuE8ljvJddhCOa6i0JpJUfQ617UvoDx0RByMqsFLXRQZs41M8CSKMAOzRcGzeVcYiIuFonyOR
+        wMran1NbSKWCtKNfyuX8Ekk8Li0AoSiHSqMiIXowsXCUlElt+xJJACevUppg9QXSldDpdKCxGKVMIIfO
+        RV+ld5pbiUTRI4RyRBWXcw/aaWwSSTwufZZElrB8iHRnT/IOqVpX4PufxXJ/EEaX2BlJjXD2EFZx6sJo
+        wHyw12BfQhtFEYhFgo3awf9x8HBPEpYj/ln7+NBpVCTApB5lcrWahmlHn4nTFV0zL+wJUjx8vTj8eO2X
+        yhZIj6hDfNp7WCTHS+Mi4Zt0Jhfi05g6wu9W+rIfAZwzdlDByRPPo3qcnOtUuhWjqBGma1CXbsVjUERP
+        pVvU0V77GoskT+MiASaWCYacUDhmlFP0LYooreLUKq7TyZVEIacjMshBxbdlpCDSqDw1F2oPOZGAPoN4
+        bIrYSu0skjytiIQJDjeypAvk2HIC3rnWyigQS5/2I2EE5GQLh8PZQ9GnTowoZ7/BSZjmIHRGOTjzhg22
+        4XzOIhKlXGE/ulcoQIskTysigVgob4PVVY7VN6GQXqaeE+eK0yXgSFbPKnDiMLrEc4c9x8GzpluCY954
+        bPG4LJI8rYlE1DkRUK5zfITRV6EATk4KwwlX6PB1YJezncVmFvjv6yb6GSqti0SwMi2vrFerH+jf5kNi
+        ofhDNV3g2EQyK6FQ4m+RjXkfdE4kQNQhPUjVGXPcdFIkxnQJi8SYDBaJMRksEmMyWCTGZLBIjMlgkRiT
+        YbS9N/av7RrzFhCJfzPRmBq2Xo7/mPx+e6LSGDMunu6MJ7/nvrV7sJAyMGbIoItKIHo9KxVDaEkZGzMY
+        yj06Otja+ffkRBmj0X9I+/0I2NkydwAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
